--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <a class="links" href="/js/">JavaScript</a> 
     <a class="links" href="/python/">Python</a>
   </nav>
-  <div id="root"></div>
-  <!-- <h1 class="text-3xl font-bold underline"> -->
- <div class="italic"> 
-  hell o 
- </div>
+  <button id="btn" class="submit_button" type="submit">new</button>
+  you clicked : 
+  <div id="root">
+    
+  </div>
+  
 <script src="action.js"></script>
 </body>
 </html>
